--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
+    "react-toastify": "^9.1.2",
     "recoil": "^0.7.6",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
